@@ -329,13 +329,6 @@
   <patternset id="teststhatfail">
     <exclude name="${optional.package}/BeanShellScriptTest.java"/>
     <exclude name="${optional.package}/jdepend/JDependTest.java"/>
-    <!-- The org.apache.tools.ant.ProjectTest.testDuplicateTargets fails.
-    This is a known problem. It was noticed that duplicate targets were
-    not detected in ant 1.6.*, so a test was put in. But no code was put in
-    to fix the problem!
-    see http://marc.theaimsgroup.com/?l=ant-dev&m=107756336622453&w=2
-    -->
-    <exclude name="${ant.package}/ProjectTest.java"/>
   </patternset>
 
   <!--
